# todolist

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_10_21_2207-2e83ec6dc6b7_create_tables.py
auth/: README.md  hashing.py  jwt_manager.py  services.py  utils.py
core/: config.py
core/dependencies/: users.py
core/exceptions/: __init__.py  auth.py  comments.py  notes.py  tasks.py  users.py
core/models/: __init__.py  base.py  comments.py  db_helper.py  notes.py  refresh_token.py  tasks.py  users.py
core/routers/: auth.py  comments.py  notes.py  tasks.py  users.py
core/schemas/: auth.py  comments.py  notes.py  tasks.py  users.py
core/services/: comments.py  notes.py  tasks.py  users.py
