[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.119.0"
uvicorn = "0.37.0"
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.30.0"
alembic = "^1.13.1"
aiosmtplib = "4.0.2"
orjson = "^3.10.18"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
bcrypt = "^5.0.0"
python-multipart = "^0.0.20"
fastapi-mail = "^1.5.7"
jinja2 = "^3.1.6"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"